# trilli

./: .gitignore  AE.md  LICENSE  Makefile  README.md  build_hosts.sh  build_hw_configs.sh  default.cfg  exec.sh  finish_packing.sh  image_generator.py  setup_all.sh
3DIRG_application/: .python-version  Makefile  dataloader.py  exec.sh  generate_dataset.sh  prepare_wrapper.sh  remove_dataset.sh  requirements.txt  rigid_registration.py  rigid_registration_nofile.py  setup_env.sh
3DIRG_application/pybind_wrapper/: wrapper.cpp
aie/: Makefile
aie/src/: graph_incremental.cpp  graph_incremental.h  kernel_adder.cpp  kernel_adder.h  kernel_mac_bottom.cpp  kernel_mac_bottom.h  kernel_mac_top.cpp  kernel_mac_top.h  kernel_merger_1_i.cpp  kernel_merger_1_i.h  kernel_merger_1_j.cpp  kernel_merger_2.h  (+2 more)
bitstreams/: config_DIM512_IPE32.cfg
common/: Makefile  common.h  setup_all.sh
data_movers/: Makefile  fetcher_A.cpp  fetcher_B.cpp  fetcher_C.cpp  fetcher_D.cpp  movers_generator.py  read_volume.hpp  setup_aie.cpp  setup_interpolator.cpp  setup_mi.cpp  writer.cpp
hw/: Makefile  config_generator.py  xclbin_overlay.template.cfg  xclbin_overlay_onlyTX.template.cfg
mutual_info/: Makefile  mutual_information_master.cpp
paper_fig/: README.md
scripts/: README.txt  gather_results_fig6.sh  gather_results_fig7.sh  gather_results_fig8.sh  generate_distortion.sh  run_for_SoA_comparison.sh  run_scaling_depth.sh
soa/ITK/: CMakeLists.txt  README.md  execute_tests.sh  itk_pow.cpp  utils.hpp
sw/: Makefile  generate_dataset.sh  host_code.cpp  remove_dataset.sh  setup_emu.sh  xrt.ini
(+162 files in other folders)
